--- a/views/createkaart.ejs
+++ b/views/createkaart.ejs
@@ -24,6 +24,9 @@
             <a href=<%= resultLink %> style="color:rgb(51, 79, 190)">Klik hier om de verschilkaart te bekijken</a>
             <% } %>
         </div>
+        <div class="container">
+            <img src="/folderstructuur_uitleg.png" alt="Folderstructuur" style="width:500px;height:400px;">
+        </div>
     </body>
     <script>
         //Make sure the url doesn't change after clicking submit
