fixed incorrect 'veranderd' bug, fixed typo, fixed duplicate dtb_id bug for shapefile bug

--- a/views/dtbverschilkaart.ejs
+++ b/views/dtbverschilkaart.ejs
@@ -24,13 +24,13 @@
                     <h3>Legenda:</h3>
                     <ul>
                         <li><span class="legend-color" style="background-color:green;"></span>Nieuwe objecten</li>
-                        <li><span class="legend-color" style="background-color:red;"></span>Verwijderd objecten</li>
+                        <li><span class="legend-color" style="background-color:red;"></span>Verwijderde objecten</li>
                         <li><span class="legend-color" style="background-color:blue;"></span>Veranderde nieuwe object(delen)</li>
-                        <li><span class="legend-color" style="background-color:gray;"></span>Veranderd oude object(delen)</li>
+                        <li><span class="legend-color" style="background-color:gray;"></span>Veranderde oude object(delen)</li>
                     </ul>
                 </div>
                 <div id="geojson-table"></div>
-                <button id="downloadButton" class="buttonstyle">Download GeoJSON</button>
+                <button id="downloadButton" class="buttonstyle">Download Verschilkaart (GeoJSON)</button>
             </div>
             
         </div>
