--- a/views/dtbverschilkaart.ejs
+++ b/views/dtbverschilkaart.ejs
@@ -8,7 +8,7 @@
         <%- include('./partials/header.ejs') %>
 
         <div class="container">
-            <a href="/dtbverschilkaart/create" style="color:rgb(51, 79, 190)">Nieuwe verschilkaart genereren</a>
+            <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart/create">Nieuwe verschilkaart genereren</a></button>
             <form id="geojsonForm">
                 <label for="geojsonId">Bestaande verschilkaart bekijken op basis van ID</label>
                 <input type="text" id="geojsonId" name="geojsonId" required>
