updated interface and smoothness

--- a/views/dtbverschilkaart.ejs
+++ b/views/dtbverschilkaart.ejs
@@ -8,7 +8,7 @@
         <%- include('./partials/header.ejs') %>
 
         <div class="container">
-            <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart/create">Nieuwe verschilkaart genereren</a></button>
+            <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart/create">&#x2728; Nieuwe verschilkaart genereren</a></button>
             <form id="geojsonForm">
                 <label for="geojsonId">Bestaande verschilkaart bekijken op basis van ID</label>
                 <input type="text" id="geojsonId" name="geojsonId" required>
@@ -31,7 +31,7 @@
                 <div id="proximity-results-container"></div>
                 <span><h3>Alle Objecten</h3></span>
                 <div id="geojson-table"></div>
-                <button id="downloadButton" class="buttonstyle">Download Verschilkaart (GeoJSON)</button>
+                <button id="downloadButton" class="buttonstyle">&#8595; Download Verschilkaart (GeoJSON)</button>
             </div>
         </div>
         <script src="/verschilkaart.js"></script>
