--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
         <%- include('./partials/header.ejs') %>
 
         <div class="container">
-            <h1>Welkom op de home pagina</h1>
+            <br><br>
+            <h1>Home pagina</h1>
         </div>
 
     </body>
