--- a/public/styles.css
+++ b/public/styles.css
@@ -79,18 +79,19 @@
         .buttonstyle {
             font-family: Verdana, Geneva, sans-serif;
             padding: 6px 6px;
-            background-color: rgb(248, 250, 162);
+            background-color: rgb(255, 255, 255);
             font-size: 1.0rem;
-            border: 2px solid lightgrey;
-            border-radius: 12px;
-            color: black;
+            border: 2px solid rgb(85, 158, 241);
+            border-radius: 8px;
+            color: rgb(0, 0, 0);
             margin-top: 4px;
             margin-bottom: 0px;
             cursor: pointer;
         }
         
         .buttonstyle:hover {
-            background-color: rgb(255, 230, 86);
+            background-color: rgb(233, 246, 255);
+            border: 2px solid rgb(24, 76, 136);
         }
 
         a {
@@ -98,6 +99,11 @@
           color: black;
         }
         
+        h3 {
+            font-size: 1.1rem;
+            font-family: 'Trebuchet MS', Tahoma, sans-serif;
+          }
+
         input {
             width: 500px;
         }
@@ -134,6 +140,7 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            font-size: 0.9rem;
         }
         
         th, td {
