--- a/views/createkaart.ejs
+++ b/views/createkaart.ejs
@@ -8,7 +8,7 @@
         <%- include('./partials/header.ejs') %>
     
         <div class="container">
-            <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart">Bestaande verschilkaart bekijken</a></button>
+            <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart">&#8617; Bestaande verschilkaart bekijken</a></button>
             <form method="post" action="create" enctype="multipart/form-data">
                 <label>Upload Uitsnede:</label>
                 <input type="file" id="uitsnede" name="uitsnede" class="buttonstyle">
@@ -16,7 +16,7 @@
                 <label>Upload Mutatie:</label>
                 <input type="file" id="mutatie" name="mutatie" class="buttonstyle">
                 <br>
-                <button type="submit" class="buttonstyle">Verschilkaart generen</button>
+                <button type="submit" class="buttonstyle">&#8635; Verschilkaart generen</button>
             </form>
             <%= resultMessage %>
             <br>
