renovated layer control and added googlemaps function

--- a/views/createkaart.ejs
+++ b/views/createkaart.ejs
@@ -7,7 +7,7 @@
 
         <%- include('./partials/header.ejs') %>
     
-        <div class="container">
+        <div class="topcontainer" id="createkaart">
             <button type="submit" class="buttonstyle"><a href="/dtbverschilkaart">&#8617; Bestaande verschilkaart bekijken</a></button>
             <form method="post" action="create" enctype="multipart/form-data">
                 <label>Upload Uitsnede:</label>
