--- a/public/styles.css
+++ b/public/styles.css
@@ -9,8 +9,8 @@
             font-family: Verdana, Geneva, sans-serif;
             display: flex;
             flex-direction: column;
-            align-items: center;
             text-align: center;
+            align-items: center;
             color: black;
             min-height: 100vh;
         }
@@ -64,27 +64,28 @@
             text-decoration: underline;
         }
         
-        .container {
-            margin-top: 10px;
-            width: 90%;
+        .appcontainer {
+            display: flex;
+            width: 95%;
+            flex-direction: column;
+        }
+
+        .topcontainer {
+            margin-top: 16px;
+            height: 100%;
             text-align: left;
             line-height: 30px;
-        }
-        
-        .title {
-            font-size: 3rem;
-            margin-bottom: 50px;
+            width: 100%;
         }
         
         .buttonstyle {
             font-family: Verdana, Geneva, sans-serif;
-            padding: 6px 6px;
+            padding: 4px 4px;
             background-color: rgb(255, 255, 255);
             font-size: 1.0rem;
             border: 2px solid rgb(85, 158, 241);
-            border-radius: 8px;
+            border-radius: 4px;
             color: rgb(0, 0, 0);
-            margin-top: 4px;
             margin-bottom: 0px;
             cursor: pointer;
         }
@@ -92,6 +93,31 @@
         .buttonstyle:hover {
             background-color: rgb(233, 246, 255);
             border: 2px solid rgb(24, 76, 136);
+            color: rgb(24, 76, 136);
+        }
+
+        .threebuttons {
+            display: flex;
+            gap: 10px;
+        }
+
+        input[type="checkbox"] {
+            width: 15px;
+            height: 15px;
+            border: 1px solid #85aaff;
+            border-radius: 5px;
+            background-color: white;
+            cursor: pointer;
+            transition: background-color 0.3s, border-color 0.3s;
+        }
+
+        input[type="checkbox"]:checked {
+            background-color: #4CAF50;
+            border-color: #4CAF50;
+        }
+
+        .threebuttons .buttonstyle {
+            flex: 1;
         }
 
         a {
@@ -104,37 +130,36 @@
             font-family: 'Trebuchet MS', Tahoma, sans-serif;
           }
 
-        input {
+        .textinput {
             width: 500px;
         }
         
-        #map {
+        .mapcontainer {
             height: 100%;
-            width: 65%;
+            width: 75%;
             margin-right: 20px;
             z-index: 1;
         }
 
-        .container2 {
+        #map {
             width: 100%;
+            height: 100%;
+        }
+
+        .container-side {
+            width: 35%;
             text-align: left;
             line-height: 20px;
             display: flex;
             flex-direction: column;
         }
+
         .map-and-table-container {
             display: flex;
             justify-content: space-between;
-            width: 95%;
-            margin-top: 20px;
+            width: 100%;
+            margin-top: 16px;
             height: 750px;
-        }
-        
-        #geojson-table-container {
-            width: 35%;
-            display: flex;
-            flex-direction: column;
-            height: 100%;
         }
         
         table {
@@ -152,40 +177,52 @@
         th {
             background-color: #f2f2f2;
         }
-        .legend-container {
-            margin-bottom: 5px;
-            font-size: 1rem;
-            height: auto;
-        }
-        
-        .legend-container h3 {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        
-        .legend-container ul {
-            list-style: none;
-            padding-left: 0;
-        }
-        
-        .legend-container li {
+
+        .layercontrol {
             display: flex;
-            align-items: center;
-            margin-bottom: 2px;
+            font-family: Verdana, Geneva, sans-serif;
+            font-size: 1.0rem;
+            flex-direction: row;
+            gap: 20px;
+            background: white;
+            font-size: 14px;
+            width: 100%;
+            border: 2px solid rgb(85, 158, 241);
+            border-radius: 4px;
+            margin-top: 4px;
+            margin-bottom: 4px;
+            padding: 4px;
+        }
+
+        .layercontroltoggle,
+        .layercontrolbasemaps {
+            display: flex;
+            font-size: 1.0rem;
+            flex-direction: column;
+            gap: 6px;
+            flex-grow: 1;
+        }
+
+        .layercontrol label {
+        cursor: pointer;
         }
         
         .legend-color {
             display: inline-block;
             width: 20px;
             height: 20px;
-            margin-right: 10px;
+            margin-right: 5px;
+            margin-left: 10px;
         }
+
         #geojson-table {
             flex-grow: 1;
             margin-top: 5px;
             overflow-y: auto;
             display: block;
             max-height: 400px;
+            border: 2px solid rgb(85, 158, 241);
+            border-radius: 4px;
         }
         
         #geojson-table table {
@@ -207,27 +244,15 @@
             z-index: 10;
         }
         #proximity-results-container {
-            flex: 0 1 auto;
             margin-bottom: 5px;
             margin-top: 5px;
-            height: auto;
-            min-height: 40px;
+            min-height: 120px;
             overflow-y: auto;
+            border: 2px solid rgb(85, 158, 241);
+            border-radius: 4px;
         }
-        #downloadButton {
-            margin-top: 5px;
-        }
-        .leaflet-control-layers-toggle {
-            display: flex !important;
-            flex-direction: column !important;
-            align-items: center !important;
-            width: 100px !important;
-        }
-        
-        .leaflet-control-layers-toggle::after {
-            content: "Kaartlagen" !important;
-            font-size: 14px !important;
-            align-items: center !important;
-            color: black;
-            white-space: nowrap !important;
+        #createkaart {
+            margin-left: 24px;
+            margin-top: 24px;
+            line-height: 2.0;
         }
